--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <script type="application/javascript" src="lib/utils.js"></script>
     <script type="application/javascript" src="lib/game.js"></script>
     <script type="application/javascript" src="lib/gameView.js"></script>
+    <audio src="http://res.cloudinary.com/tholmes741/video/upload/v1452148025/DragonForce_-_Trough_the_Fire_and_Flames_HQ_Very_High_Audio_Quality_tsr52x.mp3"
+     id='music'>
+    </audio>
 
 
     <script type="application/javascript">
