--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="./images/blue.png" id='blue'/>
     <img src="./images/red.png" id='red'/>
     <img src="./images/green.png" id='green'/>
+    <img src="./images/yellow_star.png" id="star" />
 
     <script type="text/javascript">
       window.BALLS = {
@@ -18,6 +19,7 @@
         1: document.getElementById('green'),
         2: document.getElementById('blue')
       };
+      window.star = document.getElementById('star')
     </script>
     <script type="application/javascript" src="lib/movingObject.js"></script>
     <script type="application/javascript" src="lib/utils.js"></script>
